--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -12,13 +12,14 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
   padding: 8px;
   margin: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  padding: 10px;
+  padding: 16px 8px;
   margin: 8px;
 }
 
@@ -32,7 +33,7 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
-  padding: 12px;
+  padding: 8px 24px;
   margin: auto;
   display: block;
 }
