--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.plants {
+  display: flex;
+  justify-content: space-evenly;
+  gap: 52px;
+}
+
+.plants > * {
+  text-align: center;
+  width: 200px;
 }
 
 /* do not edit this footer */
