--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
 }
 
 .icon {
@@ -66,4 +67,24 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.header {
+  font-weight: bolder;
+  font-size: larger;
+  display: flex;
+  align-items: center;
+}
+
+.left-side {
+  display: flex;
+  padding: 8px;
+}
+
+.right-side {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  padding: 8px;
+  gap: 12px;
 }
