--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,6 +21,8 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
+  padding: 12px;
+  gap: 16px;
 }
 
 .icon {
@@ -74,17 +76,19 @@ button.cancel {
   font-size: larger;
   display: flex;
   align-items: center;
+  flex: 1;
+  justify-content: space-between;
 }
 
 .left-side {
   display: flex;
-  padding: 8px;
+  padding: 0px;
 }
 
 .right-side {
   display: flex;
   flex-wrap: wrap;
   justify-content: start;
-  padding: 8px;
+  padding: 0px;
   gap: 12px;
 }
