--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -44,7 +44,7 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px;
+  padding: 0px 16px;
   margin: 0px;
 }
 
