--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,12 +2,33 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  flex: 1 1 auto;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .header {
+  font-weight: 800;
+  font-size: larger;
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 12px
 }
 
 .footer {
@@ -18,12 +39,21 @@ body {
 
 .sidebar {
   width: 300px;
+  height: 500px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 3;
+}
+
+.content {
+  display: flex;
+  align-self: start;
+  flex-wrap: wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex-shrink: 1;
 }
