--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -31,29 +31,43 @@ a {
   padding: 12px
 }
 
-.footer {
-  height: 72px;
-  background: #eee;
-  color: darkmagenta;
+.main-page {
+  display: flex;
+
 }
 
 .sidebar {
   width: 300px;
-  height: 500px;
+  height: 100vh;
+  align-self: ;
   background: royalblue;
   box-sizing: border-box;
-  flex-shrink: 3;
 }
 
 .content {
   display: flex;
-  align-self: start;
   flex-wrap: wrap;
+  width: fit-content;
+  height: auto;
+  padding: 32px;
+  gap: 16px
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  flex-shrink: 1;
+  width: 250px;
+  padding: 12px;
+  flex: 1 1 auto;
+  align-items: stretch;
+}
+
+.footer {
+  height: 72px;
+  background: #eee;
+  color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
