--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -7,6 +7,7 @@ body {
 }
 
 ul {
+  font-size: 18px;
   list-style-type: none;
   display: flex;
   flex-direction: column;
@@ -21,25 +22,24 @@ a {
 
 .header {
   font-weight: 800;
-  font-size: larger;
+  font-size: 28px;
   height: 72px;
   background: darkmagenta;
   color: white;
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 12px
+  padding-left: 12px;
 }
 
 .main-page {
   display: flex;
-
+  flex: 1;
 }
 
 .sidebar {
   width: 300px;
-  height: 100vh;
-  align-self: ;
+  height: auto;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -58,9 +58,9 @@ a {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   width: 250px;
+  height: auto;
   padding: 12px;
   flex: 1 1 auto;
-  align-items: stretch;
 }
 
 .footer {
